--- a/index.html
+++ b/index.html
@@ -18,180 +18,4 @@
         .empty { color:#777; margin-left:12px; font-style:italic; }
 
         /* =========================
-           DARK MODE BASE
-        ========================= */
-        body.dark {
-            background: #0f0f0f;
-            color: #e6e6e6;
-        }
-
-        body.dark header {
-            background: linear-gradient(135deg, #1a1a1a, #333);
-        }
-
-        body.dark #searchBar {
-            background: #1a1a1a;
-            color: #fff;
-            border: 1px solid #555;
-        }
-
-        body.dark .category-title {
-            color: #fff;
-        }
-
-        body.dark .note-box {
-            background: #1a1a1a;
-            box-shadow: 0 4px 12px rgba(255,255,255,0.08);
-        }
-
-        body.dark .download-btn {
-            background: linear-gradient(135deg, #ff5e62, #c0392b);
-        }
-
-        /* =========================
-           DARK MODE TOGGLE BUTTON
-        ========================= */
-        .toggle-btn {
-            margin: 14px auto;
-            display: block;
-            padding: 10px 18px;
-            font-size: 15px;
-            font-weight: 600;
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
-            border-radius: 12px;
-            border: 1px solid rgba(255,255,255,0.3);
-            cursor: pointer;
-            backdrop-filter: blur(10px);
-            transition: all 0.3s ease;
-        }
-
-        .toggle-btn:hover {
-            background: rgba(255, 255, 255, 0.35);
-            box-shadow: 0 0 10px rgba(255,255,255,0.7);
-        }
-
-        body.dark .toggle-btn {
-            background: rgba(0,0,0,0.6);
-            border-color: rgba(255,255,255,0.25);
-        }
-
-        body.dark .toggle-btn:hover {
-            background: rgba(0,0,0,0.8);
-            box-shadow: 0 0 10px rgba(0,150,255,0.6);
-        }
-    </style>
-</head>
-<body>
-<header>📘 Notes Platform</header>
-
-<!-- Dark Mode Toggle -->
-<button id="darkToggle" class="toggle-btn">🌙 Dark Mode</button>
-
-<main>
-  <input type="text" id="searchBar" placeholder="Search notes or categories...">
-  <div id="content"></div>
-</main>
-
-<script>
-/* ----------------------------
-   Load manifest.json (Auto-update)
------------------------------- */
-async function fetchManifest() {
-  try {
-    const res = await fetch('notes/manifest.json', { cache: "no-store" });
-    if (!res.ok) throw new Error("manifest not found");
-    return await res.json();
-  } catch (err) {
-    console.error("Failed to load manifest:", err);
-    return null;
-  }
-}
-
-function createCard(pdf) {
-  return `
-    <div class="note-box" data-name="${pdf.name.toLowerCase()}" data-category="${(pdf._category||'').toLowerCase()}">
-      <h3 style="margin:0 0 6px 0;">${pdf.name}</h3>
-      ${pdf.size ? `<p style="margin:0;color:#bbb">Size: ${pdf.size}</p>` : ''}
-      <a href="notes/${pdf.file}" class="download-btn" target="_blank" download>Download PDF</a>
-    </div>
-  `;
-}
-
-/* ----------------------------
-   Render notes
------------------------------- */
-function render(manifest) {
-  const content = document.getElementById('content');
-  content.innerHTML = '';
-
-  if (!manifest || Object.keys(manifest).length === 0) {
-    content.innerHTML = '<p class="empty">No notes available yet.</p>';
-    return;
-  }
-
-  for (const [category, arr] of Object.entries(manifest)) {
-    const title = document.createElement('div');
-    title.className = 'category-title';
-    title.textContent = category;
-    content.appendChild(title);
-
-    if (!arr || arr.length === 0) {
-      content.innerHTML += '<p class="empty">No notes yet.</p>';
-      continue;
-    }
-
-    arr.forEach(pdf => {
-      pdf._category = category;
-      const wrap = document.createElement('div');
-      wrap.innerHTML = createCard(pdf);
-      content.appendChild(wrap.firstElementChild);
-    });
-  }
-}
-
-/* ----------------------------
-   Search
------------------------------- */
-function applySearch() {
-  const q = document.getElementById('searchBar').value.trim().toLowerCase();
-  document.querySelectorAll('.note-box').forEach(box => {
-    const name = box.dataset.name;
-    const cat = box.dataset.category;
-    box.style.display = (!q || name.includes(q) || cat.includes(q)) ? '' : 'none';
-  });
-}
-
-/* ----------------------------
-   Dark mode toggle
------------------------------- */
-const toggle = document.getElementById("darkToggle");
-
-if (localStorage.getItem("dark") === "true") {
-    document.body.classList.add("dark");
-    toggle.textContent = "☀️ Light Mode";
-}
-
-toggle.addEventListener("click", () => {
-    document.body.classList.toggle("dark");
-    const isDark = document.body.classList.contains("dark");
-    localStorage.setItem("dark", isDark);
-    toggle.textContent = isDark ? "☀️ Light Mode" : "🌙 Dark Mode";
-});
-
-/* ----------------------------
-   Initialize
------------------------------- */
-(async function init() {
-  const manifest = await fetchManifest();
-  if (!manifest) {
-    document.getElementById('content').innerHTML = '<p class="empty">Failed to load notes manifest.</p>';
-    return;
-  }
-  render(manifest);
-  document.getElementById('searchBar').addEventListener('input', applySearch);
-})();
-</script>
-
-</body>
-</html>
+           DARK MODE B
