--- a/index.html
+++ b/index.html
@@ -11,9 +11,84 @@
         body { font-family: Arial, sans-serif; margin: 0; background:#f7f7f7; color:#333; transition: all 0.3s ease; }
         header { background: linear-gradient(135deg,#6a11cb,#2575fc); color:#fff; padding:25px; text-align:center; font-size:26px; font-weight:700; transition: all 0.3s ease; }
         #searchBar { width:90%; max-width:600px; margin:18px auto; display:block; padding:12px; border-radius:10px; border:1px solid #ccc; font-size:16px; transition: all 0.3s ease; }
-        .category-title { font-size:22px; font-weight:700; margin:24px 0 8px 12px; color:#333; transition: color 0.3s ease; }
-        .note-box { background:#fff; padding:14px; border-radius:12px; margin:10px; box-shadow:0 4px 10px rgba(0,0,0,0.08); transition: all 0.3s ease; }
-        .download-btn { display:inline-block; margin-top:10px; padding:10px 14px; background:linear-gradient(135deg,#ff9966,#ff5e62); color:#fff; border-radius:8px; text-decoration:none; font-weight:700; transition: all 0.3s ease; }
+        .category-title {
+            font-size:22px;
+            font-weight:700;
+            margin:24px 0 8px 12px;
+            color:#333;
+            position: relative;
+            width: fit-content;
+            cursor: default;
+            transition: color 0.3s ease;
+        }
+
+        /* CATEGORY TITLE UNDERLINE SLIDE */
+        .category-title::after {
+            content: "";
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            height: 3px;
+            width: 0%;
+            background: linear-gradient(90deg, #6a11cb, #2575fc);
+            border-radius: 50px;
+            transition: width 0.35s ease;
+        }
+        .category-title:hover::after {
+            width: 100%;
+        }
+
+        .note-box {
+            background:#fff;
+            padding:14px;
+            border-radius:12px;
+            margin:10px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08);
+            transition: transform 0.25s ease, box-shadow 0.3s ease;
+        }
+
+        /* CARD HOVER */
+        .note-box:hover {
+            transform: translateY(-6px) scale(1.02);
+            box-shadow:0 10px 18px rgba(0,0,0,0.15);
+        }
+
+        .download-btn {
+            display:inline-block;
+            margin-top:10px;
+            padding:10px 14px;
+            background:linear-gradient(135deg,#ff9966,#ff5e62);
+            color:#fff;
+            border-radius:8px;
+            text-decoration:none;
+            font-weight:700;
+            position: relative;
+            overflow:hidden;
+            transition: transform 0.25s ease, box-shadow 0.25s ease;
+        }
+
+        /* DOWNLOAD BUTTON HOVER */
+        .download-btn:hover {
+            transform: scale(1.07);
+            box-shadow: 0 6px 16px rgba(255,94,98,0.4);
+        }
+
+        /* Shine effect */
+        .download-btn::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 60%;
+            height: 100%;
+            background: rgba(255,255,255,0.45);
+            transform: skewX(-20deg);
+            transition: all 0.4s ease;
+        }
+        .download-btn:hover::after {
+            left: 120%;
+        }
+
         main { max-width:1100px; margin:0 auto 60px; padding:10px;}
         .empty { color:#777; margin-left:12px; font-style:italic; }
 
@@ -49,7 +124,7 @@
         }
 
         /* =========================
-           DARK MODE TOGGLE BUTTON (IMPROVED)
+           DARK MODE TOGGLE BUTTON 
         ========================= */
         .toggle-btn {
             position: fixed;
@@ -61,9 +136,10 @@
             border-radius: 10px;
             cursor: pointer;
             transition: 0.3s ease;
-            border: 1px solid #888;            /* visible in light mode */
-            background: #ffffff;                /* light mode background */
+            border: 1px solid #888;
+            background: #ffffff;
             color: #000;
+            z-index: 999;
         }
 
         .toggle-btn:hover {
@@ -71,7 +147,7 @@
         }
 
         body.dark .toggle-btn {
-            background: #222;                  /* visible in dark mode */
+            background: #222;
             color: #fff;
             border: 1px solid #555;
         }
@@ -93,9 +169,7 @@
 </main>
 
 <script>
-/* ----------------------------
-   Load manifest.json
------------------------------- */
+/* Load manifest.json */
 async function fetchManifest() {
   try {
     const res = await fetch('notes/manifest.json', { cache: "no-store" });
@@ -117,9 +191,6 @@ function createCard(pdf) {
   `;
 }
 
-/* ----------------------------
-   Render notes
------------------------------- */
 function render(manifest) {
   const content = document.getElementById('content');
   content.innerHTML = '';
@@ -135,11 +206,6 @@ function render(manifest) {
     title.textContent = category;
     content.appendChild(title);
 
-    if (!arr || arr.length === 0) {
-      content.innerHTML += '<p class="empty">No notes yet.</p>';
-      continue;
-    }
-
     arr.forEach(pdf => {
       pdf._category = category;
       const wrap = document.createElement('div');
@@ -149,9 +215,7 @@ function render(manifest) {
   }
 }
 
-/* ----------------------------
-   Search
------------------------------- */
+/* Search */
 function applySearch() {
   const q = document.getElementById('searchBar').value.trim().toLowerCase();
   document.querySelectorAll('.note-box').forEach(box => {
@@ -161,16 +225,12 @@ function applySearch() {
   });
 }
 
-/* ----------------------------
-   Dark mode toggle
------------------------------- */
+/* Dark mode toggle */
 const toggle = document.getElementById("darkToggle");
-
 if (localStorage.getItem("dark") === "true") {
     document.body.classList.add("dark");
     toggle.textContent = "☀️ Light Mode";
 }
-
 toggle.addEventListener("click", () => {
     document.body.classList.toggle("dark");
     const isDark = document.body.classList.contains("dark");
@@ -178,9 +238,7 @@ toggle.addEventListener("click", () => {
     toggle.textContent = isDark ? "☀️ Light Mode" : "🌙 Dark Mode";
 });
 
-/* ----------------------------
-   Initialize
------------------------------- */
+/* Init */
 (async function init() {
   const manifest = await fetchManifest();
   if (!manifest) {
